; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/scrrun/extr_dictionary.c_get_key_strptr.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/scrrun/extr_dictionary.c_get_key_strptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VT_BSTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @get_key_strptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_key_strptr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @V_VT(i32* %4)
  %6 = load i64, i64* @VT_BSTR, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32* @V_BSTR(i32* %9)
  store i32* %10, i32** %2, align 8
  br label %20

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32** @V_BSTRREF(i32* %12)
  %14 = icmp ne i32** %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call i32** @V_BSTRREF(i32* %16)
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %2, align 8
  br label %20

19:                                               ; preds = %11
  store i32* null, i32** %2, align 8
  br label %20

20:                                               ; preds = %19, %15, %8
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local i64 @V_VT(i32*) #1

declare dso_local i32* @V_BSTR(i32*) #1

declare dso_local i32** @V_BSTRREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
